--- a/Project Cinema/Info.plist
+++ b/Project Cinema/Info.plist
@@ -46,6 +46,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>com.atlantbh.Project-Cinema.openDetailsView</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
