Changes to make app run on my device

--- a/Project Cinema WK Extension/Info.plist
+++ b/Project Cinema WK Extension/Info.plist
@@ -27,7 +27,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>com.atlantbh.Project-Cinema.watchkitapp</string>
+			<string>com.atlantbh.Project-Cinema-Private.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
