--- a/Project Cinema WK Extension/Project Cinema WK Extension.entitlements
+++ b/Project Cinema WK Extension/Project Cinema WK Extension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.atlantbh.Project-Cinema-Private</string>
+		<string>group.com.atlantbh.Project-Cinema</string>
 	</array>
 </dict>
 </plist>
